// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test form rendering Render register component 1`] = `
<div
  className="bg-gray-50 dark:bg-gray-900"
>
  <div
    className="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
  >
    <a
      className="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
      href="#"
    >
      <img
        alt="logo"
        className="w-8 h-8 mr-2"
        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
      />
      eStore
    </a>
    <div
      className="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
    >
      <div
        className="p-6 space-y-4 md:space-y-6 sm:p-8"
      >
        <h1
          className="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
        >
          Create and account
        </h1>
        <form
          className="space-y-4 md:space-y-6"
          onSubmit={[Function]}
        >
          <div>
            <label
              className="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
              htmlFor="email"
            >
              Email
            </label>
            <input
              className="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="name@company.com"
              type="email"
            />
          </div>
          <div>
            <label
              className="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
              htmlFor="username"
            >
              Username
            </label>
            <input
              className="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              id="username"
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Enter username"
              type="username"
            />
          </div>
          <div>
            <label
              className="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
              htmlFor="password"
            >
              Password
            </label>
            <input
              className="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="••••••••"
              type="password"
            />
          </div>
          <div>
            <label
              className="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
              htmlFor="confirm-password"
            >
              Confirm password
            </label>
            <input
              className="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              id="confirm-password"
              name="rePassword"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="••••••••"
              type="password"
            />
          </div>
          <div
            className="flex items-start"
          >
            <div
              className="flex items-center h-5"
            >
              <input
                aria-describedby="terms"
                className="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
                id="terms"
                onChange={[Function]}
                type="checkbox"
              />
            </div>
            <div
              className="ml-3 text-sm"
            >
              <label
                className="font-light text-gray-500 dark:text-gray-300"
                htmlFor="terms"
              >
                I accept the
                 
                <a
                  className="font-medium text-primary-600 hover:underline dark:text-primary-500"
                  href="#"
                >
                  Terms and Conditions
                </a>
              </label>
            </div>
          </div>
          <button
            className="w-full text-white focus:ring-4  bg-primary-300 hover:bg-primary-300 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
            disabled={true}
            type="submit"
          >
            Create an account
          </button>
          <p
            className="text-sm font-light text-gray-500 dark:text-gray-400"
          >
            Already have an account?
             
            <a
              className="font-medium text-primary-600 hover:underline dark:text-primary-500"
              href="/auth/login"
              onClick={[Function]}
            >
              Login here
            </a>
          </p>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test welcome rendering Render Login component 1`] = `
<div
  className="bg-gray-50 dark:bg-gray-900"
>
  <div
    className="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
  >
    <a
      className="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
      href="#"
    >
      <img
        alt="logo"
        className="w-8 h-8 mr-2"
        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
      />
      eStore
    </a>
    <div
      className="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
    >
      <div
        className="p-6 space-y-4 md:space-y-6 sm:p-8"
      >
        <h1
          className="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
        >
          Login
        </h1>
        <form
          className="space-y-4 md:space-y-6"
          onSubmit={[Function]}
        >
          <div>
            <label
              className="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
              htmlFor="email"
            >
              Email/Username
            </label>
            <input
              className="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              id="email"
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Enter email or username"
              type="text"
            />
          </div>
          <div>
            <label
              className="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
              htmlFor="password"
            >
              Password
            </label>
            <input
              className="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="••••••••"
              type="password"
            />
          </div>
          <button
            className="w-full text-white focus:ring-4  bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
            type="submit"
          >
            Login
          </button>
          <p
            className="text-sm font-light text-gray-500 dark:text-gray-400"
          >
            Forgot password?
             
            <a
              className="font-medium text-primary-600 hover:underline dark:text-primary-500"
              href="/auth/forgot-password"
              onClick={[Function]}
            >
              Click here
            </a>
          </p>
          <p
            className="text-sm font-light text-gray-500 dark:text-gray-400"
          >
            Not have an account?
             
            <a
              className="font-medium text-primary-600 hover:underline dark:text-primary-500"
              href="/auth/register"
              onClick={[Function]}
            >
              Register here
            </a>
          </p>
        </form>
      </div>
    </div>
  </div>
</div>
`;
